<resources>
    <string name="app_name">Base Project</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="list_todos">List groceries</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="name">Tên:</string>
    <string name="number">Số lượng:</string>
    <string name="decrease">Giảm</string>
    <string name="increase">Tăng</string>
    <string name="add_grocery">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="open_app">Open app</string>
    <string name="empty">You don\'t have any grocery left</string>
</resources>