<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="grocery"
            type="com.example.baseproject.db.model.Grocery" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="3dp"
                android:text="@string/name"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@drawable/bg_edittext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="3dp"
                android:text="@={grocery.name}"
                android:textColor="@color/white"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:inputType="number"
            android:text="@={grocery.number}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decrease"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/decrease" />

            <Button
                android:id="@+id/btn_increase"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/increase" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_grocery"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"/>
    </LinearLayout>

</layout>